<resources>
    <string name="app_name">snailexpress</string>
    <string name="menu">menu</string>
    <string name="search">search</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="logout">logout</string>
    <string name="setting">setting</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirmpasswords">confirmpasswords</string>
    <string name="rname">name</string>
    <string name="telephone">telephone</string>
    <string name="email">email</string>
    <string name="scanTime">scanTime</string>
    <string name="trackRecord">trackRecord</string>
    <string-array name="company">
        <item>蜗牛快递</item>
        <item>顺丰快递 </item>
        <item>百世快递</item>
        <item>中通快递</item>
        <item>申通快递</item>
        <item>圆通快递</item>
        <item>韵达快递 </item>
        <item>邮政平邮</item>
        <item>EMS</item>
        <item>天天快递</item>
        <item>京东快递</item>
        <item>全峰快递 </item>
        <item>国通快递</item>
        <item>优速快递</item>
        <item>德邦快递</item>
        <item>快捷快递</item>
        <item>亚马逊 </item>
        <item>宅急送</item>
    </string-array>
</resources>
