<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginEnd="77dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="141dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="77dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="241dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="77dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="241dp"
        android:layout_marginEnd="77dp"
        android:layout_marginStart="30dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login" />
</android.support.constraint.ConstraintLayout>